# src/db/schema.ts
@@ -47,6 +47,9 @@ export const mediaKits = pgTable(
     parentMediaKitId: uuid("parent_media_kit_id"),
     status: mediaKitStatusEnum("status").notNull(),
     denialReason: text("denial_reason"),
+    workflowName: varchar("workflow_name"),
+    brandId: varchar("brand_id"),
+    campaignId: varchar("campaign_id"),
     createdAt: timestamp("created_at", { withTimezone: true }).notNull().defaultNow(),
     updatedAt: timestamp("updated_at", { withTimezone: true }).notNull().defaultNow(),
   },
